# monitor-spread

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
src/monitor_spread/: __init__.py  alerter.py  calculator.py  collector.py  config.py  dashboard.html  dashboard.py  main.py  models.py  report.py  storage.py
tests/: test_calculator.py  test_dashboard.py  test_storage.py
