[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitor-spread"
version = "0.1.0"
description = "Monitor de arbitragem de criptomoedas entre exchanges brasileiras e internacionais"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3",
    "httpx>=0.27",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
monitor-spread = "monitor_spread.main:main"
monitor-spread-report = "monitor_spread.report:main"
monitor-spread-dashboard = "monitor_spread.dashboard:main"

[tool.hatch.build.targets.wheel]
packages = ["src/monitor_spread"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
